[tool.poetry]
name = "benbot"
version = "0.1.0"
description = "mer your mn saskek yiolc"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
aiohttp = "^3.11.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
